--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -10,8 +10,8 @@
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>觅鱼 | 更懂你的实时优惠播报站-让优惠触手可及</title>
 <link rel="dns-prefetch" href="https://guanjia.qq.com/">
-<link rel="stylesheet" href="image/base-f3f5423bb4.css">
-<link rel="stylesheet" href="image/item-f77edccfa9.css">
+<link rel="stylesheet" href="/public/static/image/base-f3f5423bb4.css">
+<link rel="stylesheet" href="/public/static/image/item-f77edccfa9.css">
 </head>
 <body>
 	<div class="container">
@@ -35,7 +35,7 @@
 			<div class="header-middle" _hover-ignore="1">
 				<div class="main">
 					<a class="header-logo pull-left" href="https://miyu.qq.com/?ADTAG=">
-						<img src="image/40e0ccf1bbbfe699b2d0b3f768022316.png">
+						<img src="/public/static/image/40e0ccf1bbbfe699b2d0b3f768022316.png">
 					</a>
 					<div class="header-features pull-right">
 						<div class="header-feature">
@@ -123,7 +123,7 @@
 					<div class="d-top-content">
 						<div class="d-top-content-left">
 							<div class="d-large-thumbnail">
-								<img src="image/58b44c14N1eecae25.jpg">
+								<img src="/public/static/image/58b44c14N1eecae25.jpg">
 							</div>
 
 						</div>
@@ -216,7 +216,7 @@
 								<div class="d-comment-pictures">
 									<ul class="d-comment-pictures-items">
 										<li class="active"><img
-											src="image/59a535f5N71fa4d8c_002.jpg"
+											src="/public/static/image/59a535f5N71fa4d8c_002.jpg"
 											large-src="//img30.360buyimg.com/n1/s760x500_jfs/t8131/14/293637043/271876/b31063ca/59a535f5N71fa4d8c.jpg">
 											<div class="d-comment-pictures-items-arrow-down"></div></li>
 										<div class="fnClear"></div>
@@ -224,7 +224,7 @@
 									<div class="d-comment-picture-large">
 										<div class="d-comment-picture-large-container1">
 											<div class="d-comment-picture-large-container2">
-												<img src="image/59a535f5N71fa4d8c.jpg">
+												<img src="/public/static/image/59a535f5N71fa4d8c.jpg">
 											</div>
 										</div>
 									</div>
