--- a/apps/index/view/index/index.html
+++ b/apps/index/view/index/index.html
@@ -19,81 +19,7 @@
     <div id="J_BrowserUpdate" class="browser-update">
     </div>
     <![endif]-->
-		<div class="header row" id="header">
-			<div class="header-top" _hover-ignore="1">
-				<div class="main">
-					<div class="pull-left">你好，欢迎来到觅鱼</div>
-					<div class="pull-right">
-						<a href="javascript:void(0);" id="header-share"
-							data-hottag="mmm.home.sharefriend">分享本站</a> <span
-							class="header-top-right-split">&nbsp;&nbsp;|&nbsp;&nbsp;</span> <a
-							href="javascript:void(0);" id="header-addFavorite"
-							data-hottag="mmm.home.addfavorite">收藏本站</a>
-					</div>
-				</div>
-			</div>
-			<div class="header-middle" _hover-ignore="1">
-				<div class="main">
-					<a class="header-logo pull-left" href="https://miyu.qq.com/?ADTAG=">
-						<img src="/public/static/image/40e0ccf1bbbfe699b2d0b3f768022316.png">
-					</a>
-					<div class="header-features pull-right">
-						<div class="header-feature">
-							<i class="i1"></i>全网神价好货
-						</div>
-						<div class="header-feature">
-							<i class="i2"></i>人工智能推荐
-						</div>
-						<div class="header-feature">
-							<i class="i3"></i>每日实时更新
-						</div>
-					</div>
-					<form enctype="application/x-www-form-urlencoded"
-						class="header-search pull-left" method="GET"
-						action="/assets/result.html" id="header-search">
-						<input name="ADTAG" value="" type="hidden"> <input
-							name="tab" value="1" type="hidden"> <input
-							class="header-search-input" id="header-search-input" name="kw"
-							placeholder="输入关键字搜索全网内部隐藏优惠券" type="text"> <input
-							class="header-search-btn" id="header-search-btn" value=""
-							type="submit">
-						<div class="header-search-keywords">
-							<span class="header-search-keywords-title">热门搜索：</span><a
-								class="header-search-keywords-item active" target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E5%8C%85%E5%8C%85">包包</a><a
-								class="header-search-keywords-item active" target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E9%9B%B6%E9%A3%9F">零食</a><a
-								class="header-search-keywords-item active" target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E7%BE%BD%E7%BB%92%E6%9C%8D">羽绒服</a><a
-								class="header-search-keywords-item " target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E8%BF%90%E5%8A%A8%E9%9E%8B">运动鞋</a><a
-								class="header-search-keywords-item " target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E5%A5%B3%E8%A3%85">女装</a><a
-								class="header-search-keywords-item " target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E6%89%8B%E6%9C%BA">手机</a><a
-								class="header-search-keywords-item " target="_blank"
-								href="https://miyu.qq.com/assets/result.html?tab=1&amp;ADTAG=&amp;kw=%E8%80%B3%E6%9C%BA">耳机</a>
-						</div>
-					</form>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-			<div class="navbar-section" id="header-navbar">
-				<div class="main">
-					<div class="navbar-items">
-						<a class="navbar-item" href="https://miyu.qq.com/?ADTAG=">下载觅鱼优惠券</a>
-						<a class="navbar-item active"
-							href="https://miyu.qq.com/assets/god.html?ADTAG=">神价直播</a> <a
-							class="navbar-item"
-							href="https://miyu.qq.com/assets/coupon.html?ADTAG=">券后价</a> <a
-							class="navbar-item"
-							href="https://miyu.qq.com/assets/cbg.html?ADTAG=">白菜价</a> <a
-							class="navbar-item"
-							href="https://miyu.qq.com/assets/wggj/feedback.html?ADTAG=">意见反馈</a>
-					</div>
-				</div>
-			</div>
-		</div>
+		{include file="../../public/header" /} 
 		<div class="main" id="D-main">
 			<div class="d-top">
 				<div class="d-top-container">
@@ -253,18 +179,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer" id="footer">
-		<p>
-			<a target="_blank"
-				href="https://shang.qq.com/wpa/qunwpa?idkey=820ecd80532576e4e0e4ba4a2d3caf260f0c2272402d07a35dd042c413d296bd"
-				rel="nofollow">商务合作</a>|<a target="_blank"
-				href="https://shang.qq.com/wpa/qunwpa?idkey=820ecd80532576e4e0e4ba4a2d3caf260f0c2272402d07a35dd042c413d296bd"
-				rel="nofollow">联系我们</a>|<a target="_blank"
-				href="https://miyu.qq.com/assets/wggj/feedback.html?ADTAG=media.miyu.footer">建议反馈</a>
-		</p>
-		<p class="copyright">Copyright © 2016 - 2017 Tencent. All Rights
-			Reserved.</p>
-	</div>
+	{include file="../../public/footer" /} 
 
 
 </body>
