--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -35,7 +35,7 @@
 									<div class="feature-items-td" index="2">券后价</div>
 									<div class="feature-items-td" index="3">优惠券</div>
 									<div class="feature-items-td" index="4">原价</div>
-									<div class="feature-items-td" index="5">优惠券</div>
+									<div class="feature-items-td" index="5">地址</div>
 								</div>
 								{volist name="list" id="vo"}
 
