--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -64,10 +64,7 @@
 											<div class="
 											feature-items-td" index="1">
 											<div class="item_title">
-												<a class="item_cat"
-													href="https://miyu.qq.com/assets/god.html?cat=9"
-													target="_blank" data-hottag="mmm.discount.info.49520"
-													onclick="">食品保健</a> <a target="_blank"
+												 <a target="_blank"
 													href="/index.php/keyWords/Keyword/goodsItem?id={$vo.nid}"
 													data-hottag="mmm.result.info.740999" isconvert="1"
 													onclick="" title="{$vo.pictUrl}">{$vo.title}</a>
@@ -92,17 +89,17 @@
 
 
 									<div class="item-col2-bottom">
-										<div class="item-time pull-left" style="color: #666;">已售{$vo.biz30Day}</div>
+										<div class="item-time pull-left" style="color: #666;">已售:{$vo.biz30Day}</div>
 										<div class="item-split pull-left"></div>
-										<a class="item-from-source pull-left"
-											href="https://detail.tmall.com/item.htm?spm=a1z10.3-b-s.w4011-14847653622.73.46f16db0jf2499&amp;id=37454658224&amp;rn=b0e66fec4c91d2c4822e8af258363613&amp;abbucket=5&amp;skuId=3106208488611"
-											target="_blank" data-hottag="mmm.result.info.740999"
-											onclick="_hmt.push([&#39;_trackEvent&#39;, &#39;result_item_shop&#39;, &#39;shop&#39;, &#39;result&#39;]);">天猫</a>
+										<div class="item-time pull-left" style="color: #666;">来源:{if $vo.userType==0}淘宝{else}天猫{/if}</div>
 										<div class="item-split pull-left"></div>
 										<div class="item-time pull-left" style="color: #666;">优惠券总数:{$vo.couponTotalCount}</div>
 										<div class="item-split pull-left"></div>
-										<div class="item-time pull-left" style="color: #666;">已领取总数:{$vo.couponSendCount}</div>
+										<div class="item-time pull-left" style="color: #666;">已领取:{$vo.couponSendCount}</div>
 										<div class="item-split pull-left"></div>
+										<div class="item-time pull-left" style="color: #666;">优惠券使用时间:{$vo.couponEffectiveStartTime/1000|date="Y-m-d",###}--{$vo.couponEffectiveEndTime/1000|date="Y-m-d",###} </div>
+										
+										
 									</div> 
 								</div>
 
